@@ -1,3 +1,7 @@
+2004-08-14  Richard Hult,,,  <richard@imendio.com>
+
+	* sv.po: Updated.
+
 2004-08-11  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
